// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add and remove attribute 1`] = `
"export default function Foo() {
    return <View name={\\"hello\\"}></View>;
}
"
`;

exports[`add and remove attribute 2`] = `
"export default function Foo() {
    return <View></View>;
}
"
`;

exports[`add element 1`] = `
"export default function Foo() {
    return <View><Text></Text></View>;
}
"
`;

exports[`add element 2`] = `
"export default function Foo() {
    return <View><Text></Text><Image></Image></View>;
}
"
`;

exports[`gets component layer 1`] = `
Object {
  "element": Object {
    "attributes": Object {},
    "children": Array [],
    "indexPath": Array [
      0,
      3,
      0,
      0,
    ],
    "tagName": "View",
  },
  "name": "Foo",
}
`;

exports[`gets component layer with attributes 1`] = `
Object {
  "element": Object {
    "attributes": Object {
      "name": Object {
        "type": "stringLiteral",
        "value": "test",
      },
    },
    "children": Array [],
    "indexPath": Array [
      0,
      3,
      0,
      0,
    ],
    "tagName": "View",
  },
  "name": "Foo",
}
`;

exports[`remove element 1`] = `
"export default function Foo() {
    return <View><Text></Text></View>;
}
"
`;

exports[`remove element 2`] = `
"export default function Foo() {
    return <View></View>;
}
"
`;

exports[`set element name 1`] = `
"export default function Foo() {
    return <View name={\\"hello\\"}></View>;
}
"
`;

exports[`visits 1`] = `
"export default function Bar() {
    return <View></View>;
}
"
`;
